# dotext

./: Cargo.toml
src/: doc.rs  docx.rs  pptx.rs  xlsx.rs
