[package]
name = "dotext"
version = "0.1.2"
authors = ["Robin Syihab <r@nosql.asia>"]
description = "Simple Rust library to extract readable text from specific document format like Word Document (docx). Currently only support several format, other format coming soon."
license = "MIT"
repository = "https://github.com/SubconsciousCompute/dotext"

[dependencies]
zip = { version = "0.6" }
quick-xml = "0.31.0"
